# VM

./: CMakeLists.txt  calltest  floattest  gay  jumptest  looptest  main.cpp  test
inc/: cmd.gch  command.hh  interpretator.hh  loader.hh  memory.hh  processor.hh  processor_state.hh  psw.hh  types.hh  word.hh
inc/command/: base_command.hh  bin.hh  control.hh  float_math.hh  io.hh  jump.hh  math.hh  math_base.hh  mov.hh
src/: loader.cpp  memory.cpp  processor.cpp
